--- a/MapDiffBot.Tests/packages.config
+++ b/MapDiffBot.Tests/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net462" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net462" />
+  <package id="Microsoft.AspNet.WebHooks.Common" version="1.2.1" targetFramework="net462" />
+  <package id="Microsoft.AspNet.WebHooks.Receivers" version="1.2.1" targetFramework="net462" />
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net462" />
 </packages>
