--- a/MapDiffBot.WebHook/packages.config
+++ b/MapDiffBot.WebHook/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Imgur.API" version="4.0.1" targetFramework="net462" />
   <package id="LibGit2Sharp" version="0.24.0" targetFramework="net462" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.185" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.2" targetFramework="net452" />
@@ -10,7 +11,7 @@
   <package id="Microsoft.AspNet.WebHooks.Receivers" version="1.2.1" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebHooks.Receivers.GitHub" version="1.2.1" targetFramework="net462" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
-  <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net462" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net462" />
   <package id="Octokit" version="0.28.0" targetFramework="net462" />
 </packages>
