Get the prototype working

--- a/MapDiffBot.WebHook/Web.config
+++ b/MapDiffBot.WebHook/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <appSettings>
-    <add key="MS_WebHookReceiverSecret_GitHub" value="16-128 value of GitHub application secret" />
+    <add key="MS_WebHookReceiverSecret_GitHub" value="16-128 value of GitHub application secret,AccessToken=value of GitHub Personal Access Token (No permissions)" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
