--- a/MapDiffBot.Generator/MapDiffBot.Generator.csproj
+++ b/MapDiffBot.Generator/MapDiffBot.Generator.csproj
@@ -44,6 +44,11 @@
     <Compile Include="..\AssemblyInfo.global.cs" />
     <Compile Include="DiffGenerator.cs" />
     <Compile Include="DiffRegion.cs" />
+    <Compile Include="DMMTools.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DMMTools.resx</DependentUpon>
+    </Compile>
     <Compile Include="GeneratorException.cs" />
     <Compile Include="GeneratorFactory.cs" />
     <Compile Include="IGenerator.cs" />
@@ -57,6 +62,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="CompileDMMTools.ps1" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="DMMTools.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>DMMTools.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
