--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,13 @@ cache:
   - C:\ProgramData\chocolatey\lib -> appveyor.yml
 install:
   - choco install fciv doxygen.portable codecov
+# Install Rust and Cargo
+# (Based on from https://github.com/rust-lang/libc/blob/master/appveyor.yml)
+  - curl -sSf -o rustup-init.exe https://win.rustup.rs
+  - rustup-init.exe --default-host %TARGET% --default-toolchain %CHANNEL% -y
+  - set PATH=%PATH%;C:\Users\appveyor\.cargo\bin
+  - rustc -Vv
+  - cargo -V
 before_build:
   - nuget restore MapDiffBot.sln
 build:
