--- a/MapDiffBot.WebHook/MapDiffBot.WebHook.csproj
+++ b/MapDiffBot.WebHook/MapDiffBot.WebHook.csproj
@@ -111,6 +111,8 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileResult.cs" />
+    <Compile Include="OperationsController.cs" />
     <Compile Include="DefaultIOManager.cs" />
     <Compile Include="Definitions.cs" />
     <Compile Include="GitHub.cs" />
@@ -127,6 +129,7 @@
     <Compile Include="IRepository.cs" />
     <Compile Include="IRepositoryManager.cs" />
     <Compile Include="IPayloadDelegator.cs" />
+    <Compile Include="LocalFileUploader.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="PullRequestPayloadHandler.cs" />
     <Compile Include="PayloadDelegator.cs" />
