Update build stuff

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,11 +4,13 @@ environment:
   repo_token:
     secure: 2IfF4fXwHC6ix7KXkbvghzUT7zFzOjWWQKypfm/efc7XrUAHZdplFuLU08JJ37yk
 skip_branch_with_pr: true
-image: Previous Visual Studio 2017
-configuration: Release
-clone_depth: 1
+image: Visual Studio 2017
+configuration: 
+  - Debug
+  - Release
+shallow_clone: true
 cache:
-  - packages -> **\packages.config
+  - packages -> **\*.csproj
   - C:\ProgramData\chocolatey\bin -> appveyor.yml
   - C:\ProgramData\chocolatey\lib -> appveyor.yml
 install:
@@ -25,8 +27,6 @@ before_build:
   - nuget restore MapDiffBot.sln
 build:
   project: MapDiffBot.sln
-  parallel: false
   verbosity: minimal
-  publish_nuget: true
 after_test:
   - ps: Tools/BuildDox.ps1
