--- a/MapDiffBot/MapDiffBot.csproj
+++ b/MapDiffBot/MapDiffBot.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Cyberboss.AspNetCore.AsyncInitializer" Version="1.0.2" />
     <PackageReference Include="GitHubJwt" Version="0.0.1" />
     <PackageReference Include="HangFire" Version="1.6.17" />
     <PackageReference Include="Hangfire.MySqlStorage" Version="1.1.1-beta" />
