Fixes and improvements

--- a/MapDiffBot/appsettings.json
+++ b/MapDiffBot/appsettings.json
@@ -1,26 +1,27 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
+    "Logging": {
+        "IncludeScopes": false,
+        "Debug": {
+            "LogLevel": {
+                "Default": "Warning"
+            }
+        },
+        "Console": {
+            "LogLevel": {
+                "Default": "Warning"
+            }
+        }
     },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
+    "Database": {
+        "IsMySQL": false,
+        "ConnectionString": "Fake"
+    },
+    "GitHub": {
+        "TagUser": "Fake",
+        "WebhookSecret": "Fake",
+        "OauthClientID": "Fake",
+        "OauthSecret": "Fake",
+        "PemData": "Fake",
+        "AppID": 0
     }
-  },
-  "Database": {
-    "IsMySQL": false,
-    "ConnectionString": "Fake"
-  },
-  "GitHub": {
-    "WebhookSecret": "Fake",
-    "OauthClientID": "Fake",
-    "OauthSecret": "Fake",
-    "PemData": "Fake",
-    "AppID": 0
-  }
 }
