--- a/MapDiffBot/appsettings.json
+++ b/MapDiffBot/appsettings.json
@@ -10,6 +10,11 @@
             "LogLevel": {
                 "Default": "Warning"
             }
+        },
+        "EntityFramework": {
+            "LogLevel": {
+                "Default": "Warning"
+            }
         }
     },
     "Database": {
