--- a/MapDiffBot/MapDiffBot.csproj
+++ b/MapDiffBot/MapDiffBot.csproj
@@ -51,4 +51,8 @@
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
+  <Target Name="PreBuild" BeforeTargets="PreBuildEvent" Condition="'$(Configuration)|$(Platform)'!='Docker|AnyCPU'">
+    <Exec Command="cd ../SpacemanDMM&#xD;&#xA;cargo build -p cli --release" />
+  </Target>
+
 </Project>
