--- a/MapDiffBot/appsettings.json
+++ b/MapDiffBot/appsettings.json
@@ -26,7 +26,7 @@
         "WebhookSecret": "Fake",
         "OauthClientID": "Fake",
         "OauthSecret": "Fake",
-        "PemData": "Fake",
+        "PemPath": "path/to/private/key/pem",
         "AppID": 0
     }
 }
