--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,6 @@
 pull_requests:
   do_not_increment_build_number: true
+skip_branch_with_pr: true
 environment:
   repo_token:
     secure: 2IfF4fXwHC6ix7KXkbvghzUT7zFzOjWWQKypfm/efc7XrUAHZdplFuLU08JJ37yk
