Fix release builds, reenable tests

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,5 +28,10 @@ before_build:
 build:
   project: MapDiffBot.sln
   verbosity: minimal
+test_script:
+  - set path=%ProgramFiles(x86)%\Microsoft Visual Studio\2017\TestAgent\Common7\IDE\CommonExtensions\Microsoft\TestWindow;%path%
+  - copy "%ProgramFiles(x86)%\Microsoft Visual Studio\2017\Community\Common7\IDE\CommonExtensions\Microsoft\TestWindow\Extensions\appveyor.*" "%ProgramFiles(x86)%\Microsoft Visual Studio\2017\TestAgent\Common7\IDE\CommonExtensions\Microsoft\TestWindow\Extensions" /y
+  - vstest.console /logger:Appveyor "MapDiffBot.Tests\bin\Release\netcoreapp2.0\MapDiffBot.Tests.dll" /Enablecodecoverage /Settings:"Tools/CoverageExclusions.runsettings" /inIsolation
 after_test:
+  - ps: Tools/UploadCoverage.ps1
   - ps: Tools/BuildDox.ps1
