--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,7 +35,9 @@ build:
 test_script:
   - set path=%ProgramFiles(x86)%\Microsoft Visual Studio\2017\TestAgent\Common7\IDE\CommonExtensions\Microsoft\TestWindow;%path%
   - copy "%ProgramFiles(x86)%\Microsoft Visual Studio\2017\Community\Common7\IDE\CommonExtensions\Microsoft\TestWindow\Extensions\appveyor.*" "%ProgramFiles(x86)%\Microsoft Visual Studio\2017\TestAgent\Common7\IDE\CommonExtensions\Microsoft\TestWindow\Extensions" /y
-  - vstest.console /logger:Appveyor "MapDiffBot.Tests\bin\%CONFIGURATION%\netcoreapp2.0\MapDiffBot.Tests.dll" /Enablecodecoverage /Settings:"Tools/CoverageExclusions.runsettings" /inIsolation
+  - vstest.console /EnableCodeCoverage ""MapDiffBot.Tests\bin\Release\netcoreapp2.0\MapDiffBot.Tests.dll" /logger:trx;LogFileName=results.trx
+  - ps: $wc = New-Object 'System.Net.WebClient'
+  - ps: $wc.UploadFile("https://ci.appveyor.com/api/testresults/mstest/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\TestResults\results.trx))
 after_test:
   - ps: Tools/UploadCoverage.ps1
   - ps: Tools/BuildDox.ps1
