--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,11 +15,12 @@ configuration:
   - Release
 cache:
   - packages -> **\*.csproj
+  - SpacemanDMM\target\release\deps -> .gitmodules
   - C:\ProgramData\chocolatey\bin -> appveyor.yml
   - C:\ProgramData\chocolatey\lib -> appveyor.yml
 install:
   - git submodule update --init --recursive
-  - choco install fciv doxygen.portable codecov
+  - choco install doxygen.portable codecov
 # Install Rust and Cargo
 # (Based on from https://github.com/rust-lang/libc/blob/master/appveyor.yml)
   - curl -sSf -o rustup-init.exe https://win.rustup.rs
