Adds manual url prefix specification

--- a/MapDiffBot/appsettings.json
+++ b/MapDiffBot/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+    "General": {
+        "ApplicationPrefix": "https://domain.com/MapDiffBot"
+    },
     "Logging": {
         "IncludeScopes": false,
         "Debug": {
