--- a/MapDiffBot/appsettings.json
+++ b/MapDiffBot/appsettings.json
@@ -6,12 +6,12 @@
         "IncludeScopes": false,
         "Debug": {
             "LogLevel": {
-                "Default": "Warning"
+                "Default": "Debug"
             }
         },
         "Console": {
             "LogLevel": {
-                "Default": "Warning"
+                "Default": "Trace"
             }
         },
         "EntityFramework": {
@@ -25,7 +25,7 @@
         "ConnectionString": "Fake"
     },
     "GitHub": {
-        "TagUser": "Fake",
+        "TagUser": "MapDiffBot",
         "WebhookSecret": "Fake",
         "OauthClientID": "Fake",
         "OauthSecret": "Fake",
