Small doc comment

--- a/MapDiffBot/appsettings.Docker.json
+++ b/MapDiffBot/appsettings.Docker.json
@@ -1,5 +1,5 @@
 ﻿{
-    "comment": "Use this file to configure MapDiffBot",
+    "comment": "Use this file to configure MapDiffBot. Requires a restart of the container to take effect",
     "General": {
         "ApplicationPrefix": "https://<your domain>/<your postfix>"
     },
