Fixes docker build

--- a/MapDiffBot/Dockerfile
+++ b/MapDiffBot/Dockerfile
@@ -1,22 +1,18 @@
 FROM rust AS compiler
 WORKDIR /src/SpacemanDMM
 COPY SpacemanDMM/ ./
-RUN ls -al
 RUN cargo build -p cli --release
-RUN ls -al target/release
 
 FROM microsoft/aspnetcore-build:2.0.6-2.1.101-jessie AS base
-FROM base as build
 
-WORKDIR /src/SpacemanDMM/target/release/
-COPY --from=compiler /src/SpacemanDMM/target/release/dmm-tools.exe .
+FROM base as build
 
 WORKDIR /src
 COPY MapDiffBot/* MapDiffBot/
 COPY MapDiffBot.Tests/* MapDiffBot.Tests/
 
-RUN dotnet restore MapDiffBot.Tests/MapDiffBot.Tests.csproj
 WORKDIR /src/MapDiffBot.Tests
+RUN dotnet restore
 RUN dotnet test -c Docker
 
 FROM build AS publish
@@ -27,6 +23,7 @@ RUN cp entrypoint.sh /app/
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app .
+COPY --from=compiler /src/SpacemanDMM/target/release/dmm-tools .
 
 RUN mkdir /config_data
 RUN mv appsettings.Docker.json /config_data/appsettings.Production.json
