Update Dockerfile with libgit2 deps for SpacemanDMM

--- a/MapDiffBot/Dockerfile
+++ b/MapDiffBot/Dockerfile
@@ -1,6 +1,20 @@
 FROM rust AS compiler
 WORKDIR /src/SpacemanDMM
 COPY SpacemanDMM/ ./
+
+#deps for libgit2
+RUN apt-get update && apt-get install -y --no-install-recommends \
+	libc6 \
+	zlib1g-dev \
+	libcomerr2 \
+	libc6-dev \
+	libgcrypt20 \
+	libkeyutils1 \
+	libcurl3-gnutls \
+	libsasl2-2 \
+	libgpg-error0 \
+	&& rm -rf /var/lib/apt/lists/*
+
 RUN cargo build -p cli --release
 
 FROM microsoft/aspnetcore-build:2.0.6-2.1.101-jessie AS build
