Adds process limiter

--- a/MapDiffBot/appsettings.Docker.json
+++ b/MapDiffBot/appsettings.Docker.json
@@ -1,7 +1,9 @@
 ﻿{
     "comment": "Use this file to configure MapDiffBot. Requires a restart of the container to take effect",
     "General": {
-        "ApplicationPrefix": "https://<your domain>/<your postfix>"
+        "ApplicationPrefix": "https://<your domain>/<your postfix>",
+        "comment": "Set this value if you want to limit the number of concurrent dmm-tools processes. 0 is unlimited",
+        "ProcessLimit": 0
     },
     "Database": {
         "comment": "Change the following to true if you're using MySQL/MariaDB",
