--- a/MapDiffBot/appsettings.json
+++ b/MapDiffBot/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
     "General": {
-        "ApplicationPrefix": "https://domain.com/MapDiffBot"
+        "ApplicationPrefix": "https://domain.com/MapDiffBot",
+        "ProcessLimit": 0
     },
     "Logging": {
         "IncludeScopes": false,
