Improve Docker build caching

--- a/MapDiffBot/Dockerfile
+++ b/MapDiffBot/Dockerfile
@@ -1,6 +1,5 @@
 FROM rust AS compiler
 WORKDIR /src/SpacemanDMM
-COPY SpacemanDMM/ ./
 
 #deps for libgit2
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -16,22 +15,28 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 	cmake \
 	&& rm -rf /var/lib/apt/lists/*
 
+COPY SpacemanDMM/ ./
+
 RUN cargo build -p cli --release
 
 FROM microsoft/aspnetcore-build:2.0.6-2.1.101-jessie AS build
 
 WORKDIR /src
+COPY MapDiffBot/MapDiffBot.csproj MapDiffBot/
+COPY MapDiffBot.Tests/MapDiffBot.Tests.csproj MapDiffBot.Tests/
+RUN dotnet restore
+
 COPY MapDiffBot/* MapDiffBot/
 COPY MapDiffBot.Tests/* MapDiffBot.Tests/
 
 WORKDIR /src/MapDiffBot.Tests
-RUN dotnet restore
 RUN dotnet test -c Docker
 
 WORKDIR /src/MapDiffBot
 RUN dotnet publish -c Docker -o /app && cp entrypoint.sh /app/
 
 FROM microsoft/aspnetcore:2.0.6-jessie AS base
+EXPOSE 80
 
 #deps for libgit2
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -44,14 +49,14 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 	libcurl3-gnutls \
 	libsasl2-2 \
 	libgpg-error0 \
-	&& rm -rf /var/lib/apt/lists/*
+	&& rm -rf /var/lib/apt/lists/* \
+	&& mkdir /config_data
 
 WORKDIR /app
-COPY --from=build /app .
 COPY --from=compiler /src/SpacemanDMM/target/release/dmm-tools dmm-tools.exe
+COPY --from=build /app .
 
-RUN mkdir /config_data && mv appsettings.Docker.json /config_data/appsettings.Production.json
+RUN mv appsettings.Docker.json /config_data/appsettings.Production.json
 VOLUME ["/config_data"]
 
-EXPOSE 80
 ENTRYPOINT ["./entrypoint.sh"]
