--- a/MapDiffBot/MapDiffBot.csproj
+++ b/MapDiffBot/MapDiffBot.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="HangFire" Version="1.6.17" />
     <PackageReference Include="Hangfire.MySqlStorage" Version="1.1.1-beta" />
     <PackageReference Include="LibGit2Sharp" Version="0.25.0-preview-0081" />
+    <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="7.4.6" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.2" />
