Imagine it being this hard

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,7 @@ cache:
   - C:\ProgramData\chocolatey\lib -> appveyor.yml
 install:
   - git submodule update --init --recursive
-  - choco install doxygen.portable codecov
+  - choco install doxygen.portable codecov opencover.portable
 # Install Rust and Cargo
 # (Based on from https://github.com/rust-lang/libc/blob/master/appveyor.yml)
   - curl -sSf -o rustup-init.exe https://win.rustup.rs
@@ -33,11 +33,9 @@ build:
   project: MapDiffBot.sln
   verbosity: minimal
 test_script:
-  - set path=%ProgramFiles(x86)%\Microsoft Visual Studio\2017\TestAgent\Common7\IDE\CommonExtensions\Microsoft\TestWindow;%path%
-  - copy "%ProgramFiles(x86)%\Microsoft Visual Studio\2017\Community\Common7\IDE\CommonExtensions\Microsoft\TestWindow\Extensions\appveyor.*" "%ProgramFiles(x86)%\Microsoft Visual Studio\2017\TestAgent\Common7\IDE\CommonExtensions\Microsoft\TestWindow\Extensions" /y
-  - vstest.console /EnableCodeCoverage "MapDiffBot.Tests\bin\%CONFIGURATION%\netcoreapp2.0\MapDiffBot.Tests.dll" /logger:trx;LogFileName=results.trx
+  - OpenCover.Console.exe -returntargetcode -register:user -target:"C:/Program Files/dotnet/dotnet.exe" -targetargs:"test -c %CONFIGURATION% --logger:trx;LogFileName=results.trx /p:DebugType=full MapDiffBot.Tests\bin\%CONFIGURATION%\netcoreapp2.0\MapDiffBot.Tests.dll" -filter:"+[MapDiffBot*]* -output:".\coverage.xml" -oldstyle
   - ps: $wc = New-Object 'System.Net.WebClient'
-  - ps: $wc.UploadFile("https://ci.appveyor.com/api/testresults/mstest/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\TestResults\results.trx))
+  - ps: $wc.UploadFile("https://ci.appveyor.com/api/testresults/mstest/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\MapDiffBot.Tests\TestResults\results.trx))
 after_test:
   - ps: Tools/UploadCoverage.ps1
   - ps: Tools/BuildDox.ps1
