--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,7 @@ cache:
   - C:\ProgramData\chocolatey\lib -> appveyor.yml
 install:
   - git submodule update --init --recursive
-  - choco install doxygen.portable codecov opencover.portable
+  - choco install doxygen.install codecov opencover.portable
 # Install Rust and Cargo
 # (Based on from https://github.com/rust-lang/libc/blob/master/appveyor.yml)
   - curl -sSf -o rustup-init.exe https://win.rustup.rs
