--- a/MapDiffBot/MapDiffBot.csproj
+++ b/MapDiffBot/MapDiffBot.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -14,26 +14,27 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
     <DocumentationFile>bin\Release\netcoreapp2.0\MapDiffBot.xml</DocumentationFile>
+    <NoWarn>1701;1702;CA1303;CA1031</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Cyberboss.AspNetCore.AsyncInitializer" Version="1.2.0" />
-    <PackageReference Include="GitHubJwt" Version="0.0.3" />
-    <PackageReference Include="HangFire" Version="1.6.20" />
-    <PackageReference Include="Hangfire.MySqlStorage" Version="1.1.1-beta" />
-    <PackageReference Include="LibGit2Sharp" Version="0.26.0-preview-0027" />
-    <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="7.9.0" />
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.5" />
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.2">
+    <PackageReference Include="GitHubJwt" Version="0.0.4" />
+    <PackageReference Include="HangFire" Version="1.7.9" />
+    <PackageReference Include="Hangfire.MySqlStorage" Version="2.0.0" />
+    <PackageReference Include="LibGit2Sharp" Version="0.26.2" />
+    <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="7.15.1" />
+    <PackageReference Include="Microsoft.AspNetCore.All" />
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.5" />
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.14" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Octokit" Version="0.39.0" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.2" />
-    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="1.8.10" />
-    <PackageReference Include="ZNetCS.AspNetCore.Logging.EntityFrameworkCore" Version="2.0.1" />
+    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="2.0.36" />
+    <PackageReference Include="ZNetCS.AspNetCore.Logging.EntityFrameworkCore" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -41,17 +42,24 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Octokit">
-      <HintPath>Octokit.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-
-  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
-  <Target Name="PreBuild" BeforeTargets="PreBuildEvent" Condition="'$(Configuration)|$(Platform)'!='Docker|AnyCPU'">
-    <Exec Command="bash ./BuildDMMTools.sh $(OutDir)" />
+  <PropertyGroup Condition="'$(OS)'=='Windows_NT'">
+    <DmmToolsExe>dmm-tools.exe</DmmToolsExe>
+  </PropertyGroup>
+
+    <PropertyGroup Condition="'$(OS)'!='Windows_NT'">
+    <DmmToolsExe>dmm-tools</DmmToolsExe>
+  </PropertyGroup>
+
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+      <NoWarn>1701;1702;CA1303;CA1031</NoWarn>
+    </PropertyGroup>
+
+  <Target Name="BuildSpacemanDMM" BeforeTargets="PreBuildEvent" Condition="'$(Configuration)'!='Docker'">
+    <Exec Command="cargo build -p cli --release" WorkingDirectory="$(ProjectDir)../SpacemanDMM" />
+    <Copy SourceFiles="$(ProjectDir)../SpacemanDMM/target/release/$(DmmToolsExe)" DestinationFiles="$(OutDir)/$(DmmToolsExe)" />
   </Target>
 
 </Project>
