--- a/MapDiffBot/appsettings.json
+++ b/MapDiffBot/appsettings.json
@@ -39,6 +39,7 @@
         "OauthClientID": "Fake",
         "OauthSecret": "Fake",
         "PemPath": "path/to/private/key/pem",
-        "AppID": 0
+        "AppID": 0,
+        "BlacklistedRepos": []
     }
 }
